--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,11 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.1",
     "prisma": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
