Project and Task module complete

--- a/server/.env
+++ b/server/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:456rtyfghvbn@db.ttypehmpmzihxyrrxibm.supabase.co:5432/postgres"
-JWT_TOKEN="zjP9h6ZI5LoSKCRj"
+JWT_TOKEN="5xkqcbNxTDKen7Yhgi4utqyCK42KQVMn"
 # 456rtyfghvbn
