--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,16 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
-    "@nestjs/passport": "^10.0.0",
+    "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.0",
+    "cache": "^3.0.0",
+    "clean": "^4.0.2",
     "jsonwebtoken": "^9.0.1",
-    "prisma": "^5.1.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
