--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "cache": "^3.0.0",
     "clean": "^4.0.2",
     "jsonwebtoken": "^9.0.1",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.2.0",
